force-app/main/default/objects/Privacy_Audit_Log__c/Privacy_Audit_Log__c.object-meta.xml
<CustomObject>
    <description>Immutable audit trail written by PrivacyDeletionService. One record per step of the deletion/anonymisation workflow. Used for GDPR/CCPA compliance evidence.</description>
    <label>Privacy Audit Log</label>
    <nameField>
        <displayFormat>PAL-{0000000}</displayFormat>
        <label>Privacy Audit Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Privacy Audit Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>