force-app/main/default/objects/Privacy_Audit_Log__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Open_Orders_Check</fullName><default>false</default><label>Open Orders Check</label></value>
            <value><fullName>Vouchers_Cancelled</fullName><default>false</default><label>Vouchers Cancelled</label></value>
            <value><fullName>LC_Unenrolled</fullName><default>false</default><label>LC Unenrolled</label></value>
            <value><fullName>Contact_Anonymised</fullName><default>false</default><label>Contact Anonymised</label></value>
            <value><fullName>Request_Completed</fullName><default>false</default><label>Request Completed</label></value>
            <value><fullName>Request_Failed</fullName><default>false</default><label>Request Failed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>