force-app/main/default/objects/Privacy_Audit_Log__c/fields/Performed_At__c.field-meta.xml
<CustomField>
    <fullName>Performed_At__c</fullName>
    <label>Performed At</label>
    <type>DateTime</type>
</CustomField>