force-app/main/default/objects/Privacy_Audit_Log__c/fields/Privacy_Request__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Request__c</fullName>
    <label>Privacy Request</label>
    <referenceTo>Privacy_Request__c</referenceTo>
    <relationshipLabel>Privacy Audit Logs</relationshipLabel>
    <relationshipName>Privacy_Audit_Logs</relationshipName>
    <required>true</required>
    <type>MasterDetail</type>
</CustomField>